syntax = "proto3";

package grpc;


message Session {
    string token = 1;
    int64 LastModifiedDate = 2;
}

message User {
    string user = 1;
    string password = 2;
}

message Response {
    string response = 1;
    Session session = 2;
}

service Server {
    rpc HandleRegistration (User) returns (Response) {}
    rpc HandleLogin (User) returns (Response) {}
    rpc ShowEkadashi (User) returns (Response) {}
}
